<resources>

    <string name="app_name">Inspiration Draft</string>
    <string name="title_section2">Inspirations</string>
    <string name="title_section1">Lessons</string>
    <string name="title_activity_main">Inspiration Draft</string>
    <string name="menu_settings">Settings</string>
    
    <string name="title_activity_details">Shakespeare Details</string>
    
    <string name="inspirationImage_desc">Inspiration Icon</string>
 
    <string name="empty_inspirationlist">No Inspirations</string>
    <string name="labelInspirationAssignments">Lesson Assignments:</string>
    <string name="title_activity_edit_inspiration">Edit Inspiration</string>
    <string name="menu_new_inspiration">New</string>
    <string name="menu_edit_inspiration">Edit</string>
    <string name="menu_delete_inspiration">Delete</string>
    <string name="label_content">Content:</string>
    <string name="hint_content">Enter the content of your inspiration.</string>
    <string name="toast_inspiration_saved">Inspiration Saved</string>
    
    <string name="tab_section_content">Content</string>
    <string name="tab_section_time">Alert Behavior</string>
     <string name="tab_section_selection">Selection Behavior</string>
    
    <string name="empty_lessonlist">No Lessons</string>
    <string name="labelLessonAssignments">Assigned Inspirations:</string>
    <string name="title_activity_edit_lesson">Edit Lesson</string>
    <string name="menu_new_lesson">New</string>
    <string name="menu_edit_lesson">Edit</string>
    <string name="menu_delete_lesson">Delete</string>
    <string name="label_lesson_title">Lesson Title:</string>
    <string name="hint_suffix_name">Enter a your lesson suffix here.</string>
    <string name="toast_lesson_saved">Lesson Saved</string>
    
    <string name="label_id">ID:  </string>
    <string name="no_id">no ID yet</string>
	<string name="no_title">no lesson title yet</string>
	<string name="menu_ok">Save</string>
    <string name="menu_cancel">Cancel</string>
    <string name="lesson_id_generator">lessonIdGeneratorIdentifier</string>
    <string name="inspiration_id_generator">inspirationIdGeneratorIdentifier</string>
    
    <string name="toast_testone">update insp, if nothing</string>
    <string name="toast_testtwo">update insp, else add</string>
    <string name="toast_testthree">update lessons, if nothing</string>
    <string name="toast_testfour">update lessons, else add</string>
    <string name="menu_new_alert">New</string>
    <string name="menu_edit_alert">Edit</string>
    <string name="menu_cancel_alert_edit">Cancel</string>
    <string name="menu_delete_alert">Delete</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
</resources>