<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:orientation="horizontal"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content">
    	
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
	        android:text="@string/label_id" 
	    	android:layout_marginRight="5dp" />
	    
	    <TextView
		        android:id="@+id/lesson_id"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="12sp"
		        android:text="@string/no_id" />
    </LinearLayout>
	<LinearLayout
        android:orientation="horizontal"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content">

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/label_lesson_title" />
	     
	    <EditText 
	        android:id="@+id/suffix_name_field"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="24sp"
	        android:textStyle="bold"
	        android:inputType="text|textMultiLine|textCapSentences"
	        android:hint="@string/hint_suffix_name" />
	</LinearLayout>
    
    <ListView
        android:id="@+id/inspirationlist"
       	android:layout_width="fill_parent"
       	android:layout_height="wrap_content" />
    
</LinearLayout>